syntax = "proto3";

option csharp_namespace = "CommentService.Rpc.Protos";

package sunnyblog;
import "google/protobuf/empty.proto";

//定义服务
service gUser{
	//根据账号密码查询用户
	rpc GetUserByPassword(UserRequest) returns(UserInfoResponse);
	//根据账号查询用户
	rpc GetUserByUsername(UserNameRequest) returns(UserInfoResponse);
	//根据ID查询用户信息
	rpc GetUserByID(UserInfoRequest) returns (UserInfoResponse);
	//获取yoghurt列表
	rpc GetUserList(google.protobuf.Empty) returns(UserInfoListReqponse);
}

//定义请求对象
message UserRequest{
	string Username = 1;
	string Password = 2;
}

//定义请求对象
message UserNameRequest{
	string Username = 1;
}

message UserInfoRequest{
	int32 Id = 1;
}

message UserInfoResponse{
	int32 Id = 1;
	string Username = 2;
	string Nick = 3;
	string Photo = 4;
}


message UserInfoListReqponse{
	repeated UserInfoResponse UserInfo =1;
}